<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <com.joint.jointpolice.widget.RecyScollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingTop="@dimen/bdp_15">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/bdp_15">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_alarm_people"
                        android:textColor="@color/textPrimary" />

                    <TextView
                        android:id="@+id/tv_alarm_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/bdp_5"
                        android:textColor="@color/textSencondary"
                        tools:text="张三" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_alarm_phone" />

                    <TextView
                        android:id="@+id/tv_alarm_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/bdp_5"
                        android:textColor="@color/textSencondary"
                        tools:text="13888888856" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bdp_15"
                android:paddingLeft="@dimen/bdp_15"
                android:text="@string/text_alarm_img" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recy_alarm_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/bdp_15"
                    android:paddingTop="@dimen/bdp_10"
                    android:visibility="visible" />
            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bdp_15"
                android:paddingLeft="@dimen/bdp_15"
                android:text="@string/text_alarm_voice" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recy_alarm_voice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/bdp_15"
                    android:paddingTop="@dimen/bdp_10"
                    android:visibility="visible" />

            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bdp_15"
                android:paddingLeft="@dimen/bdp_15"
                android:text="@string/text_alarm_video" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recy_alarm_video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/bdp_15"
                    android:paddingTop="@dimen/bdp_10"
                    android:visibility="visible" />
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bdp_15"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/bdp_15"
                    android:text="@string/text_alarm_address" />

                <TextView
                    android:id="@+id/tv_alarm_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textSencondary" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bdp_15"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/bdp_15"
                    android:text="@string/text_alarm_reason" />

                <TextView
                    android:id="@+id/tv_alarm_reason"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/textSencondary" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bdp_15"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/bdp_15"
                    android:text="@string/text_alarm_grade" />

                <TextView
                    android:id="@+id/tv_alarm_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/textSencondary" />

            </LinearLayout>


            <TextView
                android:id="@+id/tv_alarm_circum_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bdp_20"
                android:layout_marginTop="@dimen/bdp_15"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_round_white_main"
                android:paddingBottom="@dimen/bdp_3"
                android:paddingLeft="@dimen/bdp_15"
                android:paddingRight="@dimen/bdp_15"
                android:textColor="@color/colorPrimary"
                android:paddingTop="@dimen/bdp_3"
                android:text="@string/text_alarm_circum_info" />

        </LinearLayout>


    </com.joint.jointpolice.widget.RecyScollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bdp_40"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_police_start_feedback"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_alarm_start_feedback"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_13" />

        <View
            android:layout_width="@dimen/bdp_1"
            android:layout_height="@dimen/bdp_15"
            android:background="@color/f5" />

        <TextView
            android:id="@+id/tv_police_obtain_evidence"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_alarm_obtain_evidence"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_13" />

        <View
            android:layout_width="@dimen/bdp_1"
            android:layout_height="@dimen/bdp_15"
            android:background="@color/f5" />

        <TextView
            android:id="@+id/tv_police_end_feedback"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_alarm_end_feedback"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_13" />


    </LinearLayout>

</LinearLayout>