<?xml version="1.0" encoding="utf-8"?>
<com.joint.jointpolice.widget.RecyScollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_picture_select"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_picture_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/bdp_10"
            android:paddingLeft="@dimen/bdp_15"
            android:paddingTop="@dimen/bdp_15"
            android:text="@string/text_picture_img_num" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recy_locale_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/bdp_15" />

        <TextView
            android:id="@+id/tv_picture_voice_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/bdp_10"
            android:paddingLeft="@dimen/bdp_15"
            android:paddingTop="@dimen/bdp_15"
            android:text="@string/text_picture_voice_num" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recy_locale_voice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/bdp_15" />

        <TextView
            android:id="@+id/tv_picture_video_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/bdp_10"
            android:paddingLeft="@dimen/bdp_15"
            android:paddingTop="@dimen/bdp_15"
            android:text="@string/text_picture_video_num" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recy_locale_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/bdp_15" />

        <TextView
            android:id="@+id/tv_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/bdp_20"
            android:layout_marginLeft="@dimen/bdp_40"
            android:layout_marginRight="@dimen/bdp_40"
            android:layout_marginTop="@dimen/bdp_20"
            android:background="@drawable/select_btn_login"
            android:enabled="false"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/bdp_8"
            android:paddingTop="@dimen/bdp_8"
            android:text="提交"
            android:textColor="@color/white" />

    </LinearLayout>

</com.joint.jointpolice.widget.RecyScollView>